# internal/api/http/server_handler.go
@@ -3,6 +3,7 @@ package http
 import (
 	"context"
 
+	"github.com/SergeiGD/testify-profile/internal/usecases/auth"
 	"github.com/SergeiGD/testify-profile/internal/usecases/register"
 )
 
@@ -10,12 +11,14 @@ import (
 type serverHandler struct {
 	healthcheck *healthcheckHandler
 	register    *registerHandler
+	auth        *authHandler
 }
 
-func NewServerHandler(registerUseCase register.RegisterUseCase) StrictServerInterface {
+func NewServerHandler(registerUseCase register.RegisterUseCase, authUseCase auth.AuthUseCase) StrictServerInterface {
 	return &serverHandler{
 		healthcheck: &healthcheckHandler{},
 		register:    NewRegisterHandler(registerUseCase),
+		auth:        NewAuthHandler(authUseCase),
 	}
 }
 
@@ -29,4 +32,12 @@ func (h *serverHandler) Register(ctx context.Context, request RegisterRequestObj
 
 func (h *serverHandler) RegisterConfirm(ctx context.Context, request RegisterConfirmRequestObject) (RegisterConfirmResponseObject, error) {
 	return h.register.RegisterConfirm(ctx, request)
+}
+
+func (h *serverHandler) Login(ctx context.Context, request LoginRequestObject) (LoginResponseObject, error) {
+	return h.auth.Login(ctx, request)
+}
+
+func (h *serverHandler) Refresh(ctx context.Context, request RefreshRequestObject) (RefreshResponseObject, error) {
+	return h.auth.Refresh(ctx, request)
 }
