# internal/dto/auth_dto.go
@@ -1,0 +1,11 @@
+package dto
+
+type LoginInput struct {
+	Email    string
+	Password string
+}
+
+type TokenPair struct {
+	AccessToken  string
+	RefreshToken string
+}
